--- a/fireclient/sources/firesroot/command/command.html
+++ b/fireclient/sources/firesroot/command/command.html
@@ -67,7 +67,7 @@
                                         </button>
 -->
                                     </td>
-                                    <td style="width: 60%;padding: 0" data-title="command.getWord('ПЧ/ТИП/Гос№')">
+                                    <td style="width: 60%;padding: 0" data-title="command.getWord('CЧ/ТИП/Гос№')">
                                         <div class="col-sm-3 nopm">
                                             <div ng-click="command.goToDept(currorder)" class="btn-link"
                                                  style="padding-left: 0; cursor: pointer">
@@ -196,7 +196,7 @@
                     <!--ng-disabled="command.storage.selectedFire.isLPP ||command.storage.dataOfStates.command.onFireCounter==0 || command.storage.selectedFire.fireStatus.code != 6"-->
                     <button ng-click="command.buttonApproveShow('ЛПП',command.onLPP)" class="btn btn-success"
                             style="width: 100%"
-                            uib-tooltip="{{command.getWord('Ликвидация последствий пожара')}}"
+                            uib-tooltip="{{command.getWord('Ликвидация последствий ЧС')}}"
                             tooltip-placement="auto">
 
                         <div class="pull-left">
