--- a/fireclient/sources/firesroot/content/chooseTech/bystates/bystatus.html
+++ b/fireclient/sources/firesroot/content/chooseTech/bystates/bystatus.html
@@ -30,7 +30,7 @@
                                 </button>
 
                             </td>
-                            <td data-title="'ПЧ'" width="10%">
+                            <td data-title="'СО'" width="10%">
                                 <button class="btn btn-link btn-xs" ng-click="byState.changeToByDept(engine)">
                                     {{engine.fireDeptName}}
                                 </button>
