--- a/fireclient/sources/firesroot/content/chooseTech/bydept/bydept.html
+++ b/fireclient/sources/firesroot/content/chooseTech/bydept/bydept.html
@@ -2,7 +2,8 @@
     <div id={{dept.id}} class="list-group-item small clearfix"
          ng-repeat="dept in bydeptTech.storage.fireDepartments | orderBy: bydeptTech.getNumDept"
          style="padding: 0 0 0 7px;line-height: 25px;"
-         ng-click="bydeptTech.selectDept(dept)" ng-class="{active:dept==bydeptTech.selectedDept}">
+         ng-click="bydeptTech.selectDept(dept)" ng-class="{active:dept==bydeptTech.selectedDept}" ng-if="dept.fireDeptType !== 0">
+
         <div class="col-xs-10">
             <span class="glyphicon glyphicon-search"></span>
             <span><b>{{dept.fireDeptName}}</b></span></div>
