--- a/fireclient/sources/print/print.html
+++ b/fireclient/sources/print/print.html
@@ -8,7 +8,6 @@
     <meta http-equiv="content-language" content="ru">
     <title>Print</title>
 
-
     <link rel="stylesheet" href="print.css"/>
 
     <script src="print.js"></script>
@@ -18,7 +17,7 @@
 <body>
 
 <div class="print-button" onclick="doPrint()"></div>
-<iframe src="" id="report-frame" height="100%" width="100%"></iframe>
+<iframe src="" id="report-frame" width="100%" height="100%"></iframe>
 
 
 
